# infra

./: .coderabbit.yaml  .editorconfig  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .shellcheckrc  .terraform-docs.yml  .yamllint.yml  01-docker-setup.sh  02-docker-run.sh  AGENTS.md  CLAUDE.docker.md  CLAUDE.md  Dockerfile.dev  LICENSE  README.md  Taskfile.dev.yaml  Taskfile.yaml  apply.sh  lint.sh  renovate.json  ruff.toml
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  Taskfile.dev.yaml  devcontainer.json
ansible/: .dockerignore  .gitignore  README.md  Taskfile.ansible.yaml  ansible.cfg  apply-adhoc.sh  apply-base.sh  apply-cloud.sh  apply-homelab.sh  apply-mac-workstation.sh  apply-mac.sh  apply-minimal.sh  apply-nest.sh  bootstrap-ansible-linux.sh  bootstrap-ansible-mac.sh  bootstrap-ansible.sh  install-ansible.sh  inventory.ini  mac.yaml  minimal.yaml  nest.yaml  requirements.yml
arr/: bazarr.yaml  jackett.yaml  jellyseerr.yaml  radarr.yaml  sonarr.yaml
config-example/: .gitignore
dashboard/: hemidall.yaml
docker-config/: 00-system-setup.sh  01-docker-setup.sh  03-user-setup.sh
docker-setup/: .env.NAS  00-system-setup.sh  apply.sh  common.sh  updown.sh
scripts/infra-mcp/: README.md  pyproject.toml  server.py  start-server.sh
scripts/infra-mcp/tools/: __init__.py  get_app_icon.py  get_container_categories.py  get_container_tags.py  get_dashboard_groups.py
scripts/infra-mcp/tools/collections/: __init__.py  container_tools.py  task_tools.py
scripts/infra-mcp/utils/: __init__.py  constants.py  git.py  models.py  security.py
(+745 files in other folders)
